[gd_scene load_steps=6 format=3 uid="uid://biu66ihmvmku3"]

[ext_resource type="Script" path="res://addons/mars-ui/content/system/controller.gd" id="1_yrtk0"]
[ext_resource type="PackedScene" uid="uid://ds1t8vc0kxoeo" path="res://addons/godot-xr-tools/hands/model/hand_r.gltf" id="2_kex6u"]
[ext_resource type="PackedScene" uid="uid://bufelcry36rw1" path="res://addons/xr-autohandtracker/auto_handtracker.tscn" id="3_pjmb2"]
[ext_resource type="Material" uid="uid://chu0upvkheqlb" path="res://addons/mars-ui/content/system/controller_right/hands_material.tres" id="4_vhkya"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_66uu0"]
radius = 0.001
height = 0.02

[node name="XRControllerRight" type="XRController3D"]
tracker = &"right_hand"
pose = &"aim"
script = ExtResource("1_yrtk0")

[node name="AutoHandtracker" parent="." instance=ExtResource("3_pjmb2")]
visible = false
enableautotracker = false

[node name="hand" parent="." instance=ExtResource("2_kex6u")]

[node name="mesh_Hand_R" parent="hand/Armature/Skeleton3D" index="0"]
material_override = ExtResource("4_vhkya")

[node name="IndexTip" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.967526, -0.252326, 0.0150302, 0.0150301, 0.116784, 0.993043, -0.252326, -0.960569, 0.116784, 0.00665801, 0.0427913, -0.169868)
bone_name = "Index_Tip_R"
bone_idx = 9
use_external_skeleton = true
external_skeleton = NodePath("../hand/Armature/Skeleton3D")

[node name="Marker3D" type="Marker3D" parent="IndexTip"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0)
gizmo_extents = 0.02

[node name="TouchArea" type="Area3D" parent="IndexTip"]
transform = Transform3D(1, 0, 0, -1.49012e-08, 1, 0, -1.86265e-09, 0, 1, 0, 0, 0)
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="IndexTip/TouchArea"]
transform = Transform3D(1, 0, 0, -1.49012e-08, 1, 0, 0, -7.45058e-09, 1, 0, -0.01, 0)
shape = SubResource("CapsuleShape3D_66uu0")

[node name="ThumbTip" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.967042, -0.24582, 0.0663439, 0.0663439, 0.494837, 0.86645, -0.24582, -0.833492, 0.494837, -0.0261569, 0.0891963, -0.0934418)
bone_name = "Thumb_Tip_R"
bone_idx = 4
use_external_skeleton = true
external_skeleton = NodePath("../hand/Armature/Skeleton3D")

[node name="Marker3D" type="Marker3D" parent="ThumbTip"]
gizmo_extents = 0.02

[node name="MiddleTip" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.98042, -0.196912, -0.00149799, -0.001498, -0.015065, 0.999885, -0.196912, -0.980305, -0.0150651, 0.00327212, -0.00771424, -0.176318)
bone_name = "Middle_Tip_R"
bone_idx = 14
use_external_skeleton = true
external_skeleton = NodePath("../hand/Armature/Skeleton3D")

[node name="Marker3D" type="Marker3D" parent="MiddleTip"]
gizmo_extents = 0.02

[editable path="hand"]
